# http-server

./: .flake8  .gitignore  .gitmodules  README.md  run.sh
tools/Docker/: Dockerfile
workspace/: CMakeLists.txt
workspace/include/: db_handler.h  msg_parser.h  pipes_handler.h  uart.h
workspace/include/utils/: interfaces.h  msg_parser.h
workspace/scripts/: http_server.py  mock_device.py
workspace/scripts/modules/: db_handler.py  fifo.py  utils.py
workspace/src/: db_handler.cpp  main.cpp  pipes_handler.cpp  uart.cpp
workspace/src/utils/: msg_parser.cpp
